test/expected/explain_+o_exclam_eq_rck_rk++delete.out
explain S& S::operator!=(S const&) = delete
         ^
10: error: "delete" can be used only for special member functions
